@@ -1,10 +1,10 @@
 package com.gregtechceu.gtceu.api.capability.recipe;
 
 import com.gregtechceu.gtceu.GTCEu;
-import com.gregtechceu.gtceu.api.GTValues;
 import com.gregtechceu.gtceu.api.gui.widget.SlotWidget;
-import com.gregtechceu.gtceu.api.material.ChemicalHelper;
-import com.gregtechceu.gtceu.api.material.material.Material;
+import com.gregtechceu.gtceu.api.machine.trait.RecipeHandlerGroup;
+import com.gregtechceu.gtceu.api.machine.trait.RecipeHandlerGroupDistinctness;
+import com.gregtechceu.gtceu.api.machine.trait.RecipeHandlerList;
 import com.gregtechceu.gtceu.api.recipe.GTRecipeType;
 import com.gregtechceu.gtceu.api.recipe.ResearchData;
 import com.gregtechceu.gtceu.api.recipe.content.Content;
@@ -14,11 +14,10 @@ import com.gregtechceu.gtceu.api.recipe.ingredient.IntCircuitIngredient;
 import com.gregtechceu.gtceu.api.recipe.ingredient.IntProviderIngredient;
 import com.gregtechceu.gtceu.api.recipe.ingredient.SizedIngredientExtensions;
 import com.gregtechceu.gtceu.api.recipe.kind.GTRecipe;
-import com.gregtechceu.gtceu.api.recipe.lookup.*;
+import com.gregtechceu.gtceu.api.recipe.lookup.ingredient.AbstractMapIngredient;
 import com.gregtechceu.gtceu.api.recipe.lookup.ingredient.item.*;
 import com.gregtechceu.gtceu.api.recipe.modifier.ParallelLogic;
 import com.gregtechceu.gtceu.api.recipe.ui.GTRecipeTypeUI;
-import com.gregtechceu.gtceu.api.tag.TagPrefix;
 import com.gregtechceu.gtceu.common.recipe.condition.ResearchCondition;
 import com.gregtechceu.gtceu.common.valueprovider.AddedFloat;
 import com.gregtechceu.gtceu.common.valueprovider.CastedFloat;
@@ -38,8 +37,6 @@ import com.lowdragmc.lowdraglib.jei.IngredientIO;
 
 import net.minecraft.ChatFormatting;
 import net.minecraft.core.component.DataComponentPatch;
-import net.minecraft.core.component.DataComponentPredicate;
-import net.minecraft.core.component.DataComponentType;
 import net.minecraft.network.chat.Component;
 import net.minecraft.tags.TagKey;
 import net.minecraft.util.valueproviders.ConstantFloat;
@@ -49,7 +46,6 @@ import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.Ingredient;
 import net.neoforged.neoforge.common.crafting.*;
 import net.neoforged.neoforge.items.IItemHandlerModifiable;
-import net.neoforged.neoforge.items.wrapper.CombinedInvWrapper;
 
 import it.unimi.dsi.fastutil.objects.*;
 import lombok.experimental.ExtensionMethod;
@@ -60,6 +56,8 @@ import org.jetbrains.annotations.UnknownNullability;
 import java.util.*;
 import java.util.function.UnaryOperator;
 import java.util.stream.Collectors;
+
+import static com.gregtechceu.gtceu.api.recipe.RecipeHelper.addToRecipeHandlerMap;
 
 @ExtensionMethod(SizedIngredientExtensions.class)
 public class ItemRecipeCapability extends RecipeCapability<SizedIngredient> {
@@ -88,101 +86,6 @@ public class ItemRecipeCapability extends RecipeCapability<SizedIngredient> {
             return new SizedIngredient(newIngredient, 1);
         }
         return content.copyWithCount(modifier.apply(content.count()));
-    }
-
-    @Override
-    public List<AbstractMapIngredient> convertToMapIngredient(Object obj) {
-        List<AbstractMapIngredient> ingredients = new ObjectArrayList<>(1);
-        if (obj instanceof SizedIngredient ingredient) {
-            ICustomIngredient custom = ingredient.getContainedCustom();
-
-            // all kinds of special cases
-            switch (custom) {
-                case DataComponentIngredient component when component.isStrict() -> ingredients
-                        .addAll(MapItemStackStrictComponentIngredient.from(component));
-                case DataComponentIngredient component when !component.isStrict() -> ingredients
-                        .addAll(MapItemStackPartialComponentIngredient.from(component));
-                case IntCircuitIngredient circuit -> ingredients
-                        .addAll(MapItemStackStrictComponentIngredient.from(circuit.convertToData()));
-                case IntersectionIngredient intersection -> ingredients
-                        .add(new MapItemIntersectionIngredient(intersection));
-                case CompoundIngredient compound -> {
-                    for (Ingredient inner : compound.children()) {
-                        ingredients.addAll(convertToMapIngredient(inner));
-                    }
-                }
-                case IntProviderIngredient intProvider -> {
-                    switch (intProvider.getInner().getCustomIngredient()) {
-                        case DataComponentIngredient component when component.isStrict() -> ingredients
-                                .addAll(MapItemStackStrictComponentIngredient.from(component));
-                        case DataComponentIngredient component when !component.isStrict() -> ingredients
-                                .addAll(MapItemStackPartialComponentIngredient.from(component));
-                        case IntCircuitIngredient circuit -> ingredients
-                                .addAll(MapItemStackPartialComponentIngredient.from(circuit.convertToData()));
-                        case IntersectionIngredient intersection -> ingredients
-                                .add(new MapItemIntersectionIngredient(intersection));
-                        case CompoundIngredient compound -> {
-                            for (Ingredient inner : compound.children()) {
-                                ingredients.addAll(convertToMapIngredient(inner));
-                            }
-                        }
-                        case null, default -> {
-                            for (Ingredient.Value value : ingredient.ingredient().getValues()) {
-                                if (value instanceof Ingredient.TagValue(TagKey<Item> tag)) {
-                                    ingredients.add(new MapItemTagIngredient(tag));
-                                } else {
-                                    Collection<ItemStack> stacks = value.getItems();
-                                    for (ItemStack stack : stacks) {
-                                        ingredients.add(new MapItemStackIngredient(stack, ingredient.ingredient()));
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-                case null, default -> {
-                    for (Ingredient.Value value : ingredient.ingredient().getValues()) {
-                        if (value instanceof Ingredient.TagValue(TagKey<Item> tag)) {
-                            ingredients.add(new MapItemTagIngredient(tag));
-                        } else {
-                            Collection<ItemStack> stacks = value.getItems();
-                            for (ItemStack stack : stacks) {
-                                ingredients.add(new MapItemStackIngredient(stack, ingredient.ingredient()));
-                            }
-                        }
-                    }
-                }
-            }
-        } else if (obj instanceof ItemStack stack) {
-            ingredients.add(new MapItemStackIngredient(stack));
-
-            stack.getTags().forEach(tag -> ingredients.add(new MapItemTagIngredient(tag)));
-            if (!stack.isComponentsPatchEmpty()) {
-                // formatter:off
-                ingredients
-                        .add(new MapItemStackStrictComponentIngredient(stack,
-                                (DataComponentIngredient) DataComponentIngredient.of(true, stack)
-                                        .getCustomIngredient()));
-                DataComponentPredicate.Builder builder = DataComponentPredicate.builder();
-                for (var entry : stack.getComponentsPatch().entrySet()) {
-                    if (entry.getValue().isEmpty()) continue;
-                    builder.expect((DataComponentType) entry.getKey(), entry.getValue().get());
-                }
-                ingredients.add(new MapItemStackPartialComponentIngredient(stack,
-                        (DataComponentIngredient) DataComponentIngredient.of(false, builder.build(), stack.getItem())
-                                .getCustomIngredient()));
-                // formatter:on
-            }
-            TagPrefix prefix = ChemicalHelper.getPrefix(stack.getItem());
-            if (!prefix.isEmpty() && TagPrefix.ORES.containsKey(prefix)) {
-                Material material = ChemicalHelper.getMaterialStack(stack.getItem()).material();
-                ingredients.add(new MapItemIntersectionIngredient((IntersectionIngredient) IntersectionIngredient
-                        .of(Ingredient.of(prefix.getItemTags(material).getFirst()),
-                                Ingredient.of(prefix.getItemParentTags().getFirst()))
-                        .getCustomIngredient()));
-            }
-        }
-        return ingredients;
     }
 
     @Override
@@ -238,191 +141,230 @@ public class ItemRecipeCapability extends RecipeCapability<SizedIngredient> {
     }
 
     @Override
+    public @Nullable List<AbstractMapIngredient> getDefaultMapIngredient(Object object) {
+        if (object instanceof Ingredient ingredient) {
+            return CustomItemMapIngredient.from(ingredient);
+        } else if (object instanceof SizedIngredient sized) {
+            return getDefaultMapIngredient(sized.ingredient());
+        } else {
+            return Collections.emptyList();
+        }
+    }
+
+    @Override
     public boolean isRecipeSearchFilter() {
         return true;
     }
 
     @Override
-    public int limitParallel(GTRecipe recipe, IRecipeCapabilityHolder holder, int multiplier) {
-        if (holder instanceof ICustomParallel p) return p.limitParallel(recipe, multiplier);
+    public int limitMaxParallelByOutput(IRecipeCapabilityHolder holder, GTRecipe recipe, int multiplier, boolean tick) {
+        if (holder instanceof ICustomParallel p) return p.limitItemParallel(recipe, multiplier, tick);
+        var outputContents = (tick ? recipe.tickOutputs : recipe.outputs).get(this);
+        if (outputContents == null || outputContents.isEmpty()) return multiplier;
+
+        if (!holder.hasCapabilityProxies()) return 0;
+
+        var handlers = holder.getCapabilitiesFlat(IO.OUT, this);
+        if (handlers.isEmpty()) return 0;
 
         int minMultiplier = 0;
         int maxMultiplier = multiplier;
 
-        OverlayedItemHandler itemHandler = new OverlayedItemHandler(new CombinedInvWrapper(
-                holder.getCapabilitiesFlat(IO.OUT, ItemRecipeCapability.CAP).stream()
-                        .filter(IItemHandlerModifiable.class::isInstance)
-                        .map(IItemHandlerModifiable.class::cast)
-                        .toArray(IItemHandlerModifiable[]::new)));
+        int maxCount = 0;
+        List<SizedIngredient> ingredients = new ArrayList<>(outputContents.size());
+        for (var content : outputContents) {
+            var ing = of(content.content);
 
-        Object2IntMap<ItemStack> recipeOutputs = GTHashMaps
-                .fromItemStackCollection(recipe.getOutputContents(ItemRecipeCapability.CAP)
-                        .stream()
-                        .map(content -> ItemRecipeCapability.CAP.of(content.getContent()))
-                        .filter(ingredient -> !ingredient.ingredient().hasNoItems())
-                        .map(ingredient -> ingredient.getItems()[0])
-                        .toList());
-
-        while (minMultiplier != maxMultiplier) {
-            itemHandler.reset();
-
-            int returnedAmount = 0;
-            int amountToInsert;
-
-            for (Object2IntMap.Entry<ItemStack> entry : recipeOutputs.object2IntEntrySet()) {
-                // Since multiplier starts at Int.MAX, check here for integer overflow
-                if (entry.getIntValue() != 0 && multiplier > Integer.MAX_VALUE / entry.getIntValue()) {
-                    amountToInsert = Integer.MAX_VALUE;
-                } else {
-                    amountToInsert = entry.getIntValue() * multiplier;
-                }
-                returnedAmount = itemHandler.insertStackedItemStack(entry.getKey(), amountToInsert);
-                if (returnedAmount > 0) {
-                    break;
-                }
+            int count;
+            if (ing.getContainedCustom() instanceof IntProviderIngredient provider) {
+                count = provider.getCountProvider().getMaxValue();
+            } else {
+                count = ing.count();
             }
 
-            int[] bin = ParallelLogic.adjustMultiplier(returnedAmount == 0, minMultiplier, multiplier, maxMultiplier);
+            maxCount = Math.max(maxCount, count);
+            ingredients.add(ing);
+        }
+
+        if (maxCount == 0) return multiplier;
+        if (multiplier > Integer.MAX_VALUE / maxCount) {
+            maxMultiplier = multiplier = Integer.MAX_VALUE / maxCount;
+        }
+
+        while (minMultiplier != maxMultiplier) {
+            List<SizedIngredient> copied = new ArrayList<>();
+            for (final var ing : ingredients) {
+                copied.add(copyWithModifier(ing, ContentModifier.multiplier(multiplier)));
+            }
+            for (var handler : handlers) {
+                // noinspection unchecked
+                copied = (List<SizedIngredient>) handler.handleRecipe(IO.OUT, recipe, copied, true);
+                if (copied == null) break;
+            }
+            int[] bin = ParallelLogic.adjustMultiplier(copied == null, minMultiplier, multiplier, maxMultiplier);
             minMultiplier = bin[0];
             multiplier = bin[1];
             maxMultiplier = bin[2];
-
         }
+
         return multiplier;
     }
 
     @Override
-    public int getMaxParallelRatio(IRecipeCapabilityHolder holder, GTRecipe recipe, int parallelAmount) {
-        // Find all the items in the combined Item Input inventories and create oversized ItemStacks
-        Object2IntMap<ItemStack> ingredientStacks = getIngredientStacks(holder);
+    public int getMaxParallelByInput(IRecipeCapabilityHolder holder, GTRecipe recipe, int limit, boolean tick) {
+        if (!holder.hasCapabilityProxies()) return 0;
 
-        int minMultiplier = Integer.MAX_VALUE;
+        var inputs = (tick ? recipe.tickInputs : recipe.inputs).get(this);
+        if (inputs == null || inputs.isEmpty()) return limit;
+
+        // Find all the items in the combined Item Input inventories and create oversized ItemStacks
+        List<Object2IntMap<ItemStack>> inventoryGroups = getInputContents(holder);
+        if (inventoryGroups.isEmpty()) return 0;
+
         // map the recipe ingredients to account for duplicated and notConsumable ingredients.
         // notConsumable ingredients are not counted towards the max ratio
-        Object2IntOpenHashMap<SizedIngredient> notConsumableMap = new Object2IntOpenHashMap<>();
-        Object2IntOpenHashMap<SizedIngredient> countableMap = new Object2IntOpenHashMap<>();
-        for (Content content : recipe.getInputContents(ItemRecipeCapability.CAP)) {
-            SizedIngredient recipeIngredient = ItemRecipeCapability.CAP.of(content.content);
-            int ingredientCount;
-            if (recipeIngredient.ingredient()
-                    .getCustomIngredient() instanceof IntProviderIngredient intProviderIngredient) {
-                ingredientCount = intProviderIngredient.getSampledCount(GTValues.RNG);
-            } else {
-                ingredientCount = recipeIngredient.count();
-            }
-            if (content.chance == 0) {
-                notConsumableMap.computeIfPresent(recipeIngredient, (k, v) -> v + ingredientCount);
-                notConsumableMap.putIfAbsent(recipeIngredient, ingredientCount);
-            } else {
-                countableMap.computeIfPresent(recipeIngredient, (k, v) -> v + ingredientCount);
-                countableMap.putIfAbsent(recipeIngredient, ingredientCount);
-            }
+        var nonConsumables = new Object2IntOpenHashMap<SizedIngredient>();
+        var consumables = new Object2IntOpenHashMap<SizedIngredient>();
+        for (Content content : inputs) {
+            SizedIngredient ing = of(content.content);
+            if (ing.getContainedCustom() instanceof IntCircuitIngredient) continue;
+
+            int count;
+            if (ing.getContainedCustom() instanceof IntProviderIngredient provider)
+                count = provider.getCountProvider().getMaxValue();
+            else count = ing.count();
+
+            if (content.chance == 0) nonConsumables.addTo(ing, count);
+            else consumables.addTo(ing, count);
         }
 
-        // Iterate through the recipe inputs, excluding the not consumable ingredients from the inventory map
-        for (Object2IntMap.Entry<SizedIngredient> recipeInputEntry : notConsumableMap.object2IntEntrySet()) {
-            int needed = recipeInputEntry.getIntValue();
-            int available = 0;
-            // For every stack in the ingredients gathered from the input bus.
-            for (Object2IntMap.Entry<ItemStack> inventoryEntry : ingredientStacks.object2IntEntrySet()) {
-                if (recipeInputEntry.getKey().test(inventoryEntry.getKey())) {
-                    available = inventoryEntry.getIntValue();
-                    if (available > needed) {
-                        inventoryEntry.setValue(available - needed);
-                        needed -= available;
-                        break;
-                    } else {
-                        inventoryEntry.setValue(0);
-                        recipeInputEntry.setValue(needed - available);
-                        needed -= available;
+        // is this even possible
+        if (consumables.isEmpty() && nonConsumables.isEmpty()) return limit;
+
+        int maxMultiplier = 0;
+        // Check every inventory group
+        for (var group : inventoryGroups) {
+            // Check for enough NC in inventory group
+            boolean satisfied = true;
+            for (var ncEntry : Object2IntMaps.fastIterable(nonConsumables)) {
+                SizedIngredient ingredient = ncEntry.getKey();
+                int needed = ncEntry.getIntValue();
+                for (var stackEntry : Object2IntMaps.fastIterable(group)) {
+                    if (ingredient.test(stackEntry.getKey())) {
+                        int count = stackEntry.getIntValue();
+                        int lesser = Math.min(needed, count);
+                        count -= lesser;
+                        needed -= lesser;
+                        stackEntry.setValue(count);
+                        if (needed == 0) break;
                     }
                 }
-            }
-            // We need to check >= available here because of Non-Consumable inputs with stack size. If there is a NC
-            // input
-            // with size 2, and only 1 in the input, needed will be equal to available, but this situation should still
-            // fail
-            // as not all inputs are present
-            if (needed >= available) {
-                return 0;
-            }
-        }
-
-        // Return the maximum parallel limit here if there are only non-consumed inputs, which are all found in the
-        // input bus
-        // At this point, we would have already returned 0 if we were missing any non-consumable inputs, so we can omit
-        // that check
-        if (countableMap.isEmpty() && !notConsumableMap.isEmpty()) {
-            return parallelAmount;
-        }
-
-        // Iterate through the recipe inputs
-        for (Object2IntMap.Entry<SizedIngredient> recipeInputEntry : countableMap.object2IntEntrySet()) {
-            int needed = recipeInputEntry.getIntValue();
-            int available = 0;
-            // For every stack in the ingredients gathered from the input bus.
-            for (Object2IntMap.Entry<ItemStack> inventoryEntry : ingredientStacks.object2IntEntrySet()) {
-                if (recipeInputEntry.getKey().test(inventoryEntry.getKey())) {
-                    available += inventoryEntry.getIntValue();
+                if (needed > 0) {
+                    satisfied = false;
                     break;
                 }
             }
-            if (available >= needed) {
-                int ratio = Math.min(parallelAmount, available / needed);
-                if (ratio < minMultiplier) {
-                    minMultiplier = ratio;
+            // Not enough NC -> skip this inventory
+            if (!satisfied) continue;
+            // Satisfied NC + no consumables -> early return
+            if (consumables.isEmpty()) return limit;
+
+            int invMultiplier = Integer.MAX_VALUE;
+            // Loop over all consumables
+            for (var cEntry : Object2IntMaps.fastIterable(consumables)) {
+                SizedIngredient ingredient = cEntry.getKey();
+                final int needed = cEntry.getIntValue();
+                final int maxNeeded = needed * limit;
+                int available = 0;
+                // Search stacks in our inventory group, summing them up
+                for (var stackEntry : Object2IntMaps.fastIterable(group)) {
+                    if (ingredient.test(stackEntry.getKey())) {
+                        available += stackEntry.getIntValue();
+                        // We can stop if we already have enough for max parallel
+                        if (available >= maxNeeded) break;
+                    }
                 }
-            } else {
-                return 0;
+                // ratio will equal 0 if available < needed
+                int ratio = Math.min(limit, available / needed);
+                invMultiplier = Math.min(invMultiplier, ratio);
+                // Not enough of this ingredient in this group -> skip inventory
+                if (ratio == 0) break;
             }
+            // We found an inventory group that can do max parallel -> early return
+            if (invMultiplier == limit) return limit;
+            maxMultiplier = Math.max(maxMultiplier, invMultiplier);
         }
-        return minMultiplier;
+        return maxMultiplier;
     }
 
-    private Object2IntMap<ItemStack> getIngredientStacks(IRecipeCapabilityHolder holder) {
-        Object2IntMap<ItemStack> map = new Object2IntOpenCustomHashMap<>(
-                ItemStackHashStrategy.comparingAllButCount());
-        Object2IntMap<ItemStack> result = new Object2IntOpenHashMap<>();
+    private static List<Object2IntMap<ItemStack>> getInputContents(IRecipeCapabilityHolder holder) {
+        var handlerLists = holder.getCapabilitiesForIO(IO.IN);
+        if (handlerLists.isEmpty()) return Collections.emptyList();
 
-        var recipeHandlerList = holder.getCapabilitiesFlat(IO.IN, ItemRecipeCapability.CAP);
+        Map<RecipeHandlerGroup, List<RecipeHandlerList>> handlerGroups = new HashMap<>();
+        for (var handler : handlerLists) {
+            if (!handler.hasCapability(ItemRecipeCapability.CAP)) continue;
+            addToRecipeHandlerMap(handler.getGroup(), handler, handlerGroups);
+        }
 
-        for (IRecipeHandler<?> container : recipeHandlerList) {
+        final var strat = ItemStackHashStrategy.comparingAllButCount();
 
-            var itemMap = container.getContents().stream().filter(ItemStack.class::isInstance)
-                    .map(ItemStack.class::cast)
-                    .flatMap(con -> GTHashMaps.fromItemStackCollection(Collections.singleton(con)).object2IntEntrySet()
-                            .stream())
-                    .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue, Integer::sum,
-                            () -> new Object2IntOpenCustomHashMap<>(ItemStackHashStrategy.comparingAllButCount())));
-
-            if (container.isDistinct()) {
-                result.putAll(itemMap);
-            } else {
-                for (Object2IntMap.Entry<ItemStack> obj : itemMap.object2IntEntrySet()) {
-                    map.computeInt(obj.getKey(), (k, v) -> v == null ? obj.getIntValue() : v + obj.getIntValue());
+        List<RecipeHandlerList> distinctHandlerLists = handlerGroups.getOrDefault(
+                RecipeHandlerGroupDistinctness.BUS_DISTINCT,
+                Collections.emptyList());
+        List<Object2IntMap<ItemStack>> invs = new ArrayList<>(distinctHandlerLists.size() + 1);
+        // Handle distinct groups first, adding an inventory based on their contents individually.
+        for (RecipeHandlerList handlerList : distinctHandlerLists) {
+            var handlers = handlerList.getCapability(ItemRecipeCapability.CAP);
+            for (IRecipeHandler<?> handler : handlers) {
+                Object2IntOpenCustomHashMap<ItemStack> distinctInv = new Object2IntOpenCustomHashMap<>(strat);
+                for (var content : handler.getContents()) {
+                    if (content instanceof ItemStack stack && !stack.isEmpty()) {
+                        distinctInv.addTo(stack, stack.getCount());
+                    }
                 }
+                if (!distinctInv.isEmpty()) invs.add(distinctInv);
             }
         }
-        result.putAll(map);
-        return result;
+
+        // Then handle other groups. The logic of undyed busses belonging to
+        // everything has already been taken care of by addToRecipeMap()
+        for (Map.Entry<RecipeHandlerGroup, List<RecipeHandlerList>> handlerListEntry : handlerGroups.entrySet()) {
+            if (RecipeHandlerGroupDistinctness.BUS_DISTINCT == handlerListEntry.getKey()) continue;
+            for (RecipeHandlerList handlerList : handlerListEntry.getValue()) {
+                var handlers = handlerList.getCapability(ItemRecipeCapability.CAP);
+                Object2IntOpenCustomHashMap<ItemStack> inventory = new Object2IntOpenCustomHashMap<>(strat);
+                for (var handler : handlers) {
+                    for (var content : handler.getContents()) {
+                        if (content instanceof ItemStack stack && !stack.isEmpty()) {
+                            inventory.addTo(stack, stack.getCount());
+                        }
+                    }
+                }
+                if (!inventory.isEmpty()) invs.add(inventory);
+            }
+        }
+
+        return invs;
     }
 
     @Override
     public @NotNull List<Object> createXEIContainerContents(List<Content> contents, GTRecipe recipe, IO io) {
-        var entryLists = contents.stream()
+        List<Object> entryLists = contents.stream()
                 .map(Content::getContent)
                 .map(this::of)
                 .map(ItemRecipeCapability::mapItem)
                 .collect(Collectors.toList());
 
-        List<ItemEntryList> scannerPossibilities = null;
         if (io == IO.OUT && recipe.recipeType.isScanner()) {
-            scannerPossibilities = new ArrayList<>();
+            List<Object> scannerPossibilities = new ArrayList<>();
             // Scanner Output replacing, used for cycling research outputs
             ResearchManager.ResearchItem researchData = null;
-            for (Content stack : recipe.getOutputContents(ItemRecipeCapability.CAP)) {
-                researchData = ItemRecipeCapability.CAP.of(stack.content).getItems()[0]
-                        .get(GTDataComponents.RESEARCH_ITEM);
+            for (Content stack : recipe.getOutputContents(this)) {
+                ItemStack[] stacks = this.of(stack.content).getItems();
+                if (stacks.length == 0 || stacks[0].isEmpty()) continue;
+
+                researchData = stacks[0].get(GTDataComponents.RESEARCH_ITEM);
                 if (researchData != null) break;
             }
             if (researchData != null) {
@@ -431,24 +373,27 @@ public class ItemRecipeCapability extends RecipeCapability<SizedIngredient> {
                 Set<ItemStack> cache = new ObjectOpenCustomHashSet<>(ItemStackHashStrategy.comparingItem());
                 if (possibleRecipes != null) {
                     for (GTRecipe r : possibleRecipes) {
-                        Content outputContent = r.getOutputContents(ItemRecipeCapability.CAP).getFirst();
-                        ItemStack researchStack = ItemRecipeCapability.CAP.of(outputContent.content).getItems()[0];
-                        if (!cache.contains(researchStack)) {
+                        var outputs = r.getOutputContents(this);
+                        if (outputs.isEmpty()) continue;
+
+                        Content outputContent = outputs.get(0);
+                        ItemStack[] stacks = this.of(outputContent.content).getItems();
+                        if (stacks.length == 0) continue;
+
+                        ItemStack researchStack = stacks[0];
+                        if (!researchStack.isEmpty() && !cache.contains(researchStack)) {
                             cache.add(researchStack);
                             scannerPossibilities.add(ItemStackList.of(researchStack.copyWithCount(1)));
                         }
                     }
                 }
                 scannerPossibilities.add(entryLists.getFirst());
+                entryLists = scannerPossibilities;
             }
         }
 
-        if (scannerPossibilities != null && !scannerPossibilities.isEmpty()) {
-            entryLists = scannerPossibilities;
-        }
-        while (entryLists.size() < recipe.recipeType.getMaxOutputs(ItemRecipeCapability.CAP)) entryLists.add(null);
-
-        return new ArrayList<>(entryLists);
+        while (entryLists.size() < recipe.recipeType.getMaxOutputs(this)) entryLists.add(null);
+        return entryLists;
     }
 
     public Object createXEIContainer(List<?> contents) {
@@ -625,8 +570,9 @@ public class ItemRecipeCapability extends RecipeCapability<SizedIngredient> {
          *
          * @param recipe     Recipe
          * @param multiplier Initial multiplier
+         * @param tick       Tick or not
          * @return Limited multiplier
          */
-        int limitParallel(GTRecipe recipe, int multiplier);
+        int limitItemParallel(GTRecipe recipe, int multiplier, boolean tick);
     }
 }
