@@ -17,8 +17,7 @@ import com.gregtechceu.gtceu.api.recipe.category.GTRecipeCategory;
 import com.gregtechceu.gtceu.api.recipe.chance.logic.ChanceLogic;
 import com.gregtechceu.gtceu.api.recipe.condition.RecipeCondition;
 import com.gregtechceu.gtceu.api.recipe.content.Content;
-import com.gregtechceu.gtceu.api.recipe.ingredient.IntCircuitIngredient;
-import com.gregtechceu.gtceu.api.recipe.ingredient.IntProviderIngredient;
+import com.gregtechceu.gtceu.api.recipe.ingredient.*;
 import com.gregtechceu.gtceu.api.recipe.kind.GTRecipe;
 import com.gregtechceu.gtceu.api.tag.TagPrefix;
 import com.gregtechceu.gtceu.common.item.behavior.IntCircuitBehaviour;
@@ -45,6 +44,7 @@ import net.minecraft.world.level.biome.Biome;
 import net.minecraft.world.level.block.Blocks;
 import net.neoforged.neoforge.common.crafting.SizedIngredient;
 import net.neoforged.neoforge.fluids.FluidStack;
+import net.neoforged.neoforge.fluids.crafting.FluidIngredient;
 import net.neoforged.neoforge.fluids.crafting.SizedFluidIngredient;
 
 import dev.ftb.mods.ftbquests.quest.QuestObjectBase;
@@ -52,15 +52,15 @@ import it.unimi.dsi.fastutil.objects.Reference2LongOpenHashMap;
 import lombok.Getter;
 import lombok.Setter;
 import lombok.experimental.Accessors;
+import lombok.experimental.ExtensionMethod;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
-import java.util.function.BiConsumer;
-import java.util.function.Supplier;
-import java.util.function.UnaryOperator;
+import java.util.function.*;
 
 @SuppressWarnings({ "unchecked", "UnusedReturnValue" })
+@ExtensionMethod(SizedIngredientExtensions.class)
 @Accessors(chain = true, fluent = true)
 public class GTRecipeBuilder {
 
@@ -96,9 +96,8 @@ public class GTRecipeBuilder {
     private boolean fluidMaterialInfo = false;
     private boolean removePreviousMatInfo = false;
     public GTRecipeCategory recipeCategory;
-    @Nullable
     @Setter
-    public BiConsumer<GTRecipeBuilder, RecipeOutput> onSave;
+    public @Nullable BiConsumer<GTRecipeBuilder, RecipeOutput> onSave;
 
     @Getter
     private final Collection<ResearchRecipeEntry> researchRecipeEntries = new ArrayList<>();
@@ -167,95 +166,37 @@ public class GTRecipeBuilder {
         return builder.copy(builder.id).onSave(null).recipeType(recipeType).category(recipeCategory);
     }
 
+    protected Content makeContent(Object o) {
+        return new Content(o, chance, maxChance, tierChanceBoost);
+    }
+
     public <T> GTRecipeBuilder input(RecipeCapability<T> capability, T obj) {
         var t = (perTick ? tickInput : input);
-        if (t.get(capability) != null && t.get(capability).size() >= recipeType.getMaxInputs(capability)) {
-            GTCEu.LOGGER.warn("Trying to add more inputs than RecipeType can support, id: {}, Max {}{}Inputs: {}",
-                    id, (perTick ? "Tick " : ""), capability.name, recipeType.getMaxInputs(capability));
-        }
-        t.computeIfAbsent(capability, c -> new ArrayList<>())
-                .add(new Content(capability.of(obj), chance, maxChance, tierChanceBoost));
+        warnTooManyIngredients(capability, true, t, 1);
+        t.computeIfAbsent(capability, c -> new ArrayList<>()).add(makeContent(capability.of(obj)));
         return this;
     }
 
     public <T> GTRecipeBuilder input(RecipeCapability<T> capability, T... obj) {
         var t = (perTick ? tickInput : input);
-        if (t.get(capability) != null && t.get(capability).size() + obj.length > recipeType.getMaxInputs(capability)) {
-            GTCEu.LOGGER.warn("Trying to add more inputs than RecipeType can support, id: {}, Max {}{}Inputs: {}",
-                    id, (perTick ? "Tick " : ""), capability.name, recipeType.getMaxInputs(capability));
-        }
-        (perTick ? tickInput : input).computeIfAbsent(capability, c -> new ArrayList<>()).addAll(Arrays.stream(obj)
-                .map(capability::of)
-                .map(o -> new Content(o, chance, maxChance, tierChanceBoost)).toList());
+        warnTooManyIngredients(capability, true, t, obj.length);
+        t.computeIfAbsent(capability, c -> new ArrayList<>())
+                .addAll(Arrays.stream(obj).map(capability::of).map(this::makeContent).toList());
         return this;
     }
 
     public <T> GTRecipeBuilder output(RecipeCapability<T> capability, T obj) {
         var t = (perTick ? tickOutput : output);
-        if (t.get(capability) != null && t.get(capability).size() >= recipeType.getMaxOutputs(capability)) {
-            GTCEu.LOGGER.warn("Trying to add more outputs than RecipeType can support, id: {}, Max {}{}Outputs: {}",
-                    id, (perTick ? "Tick " : ""), capability.name, recipeType.getMaxOutputs(capability));
-        }
-        (perTick ? tickOutput : output).computeIfAbsent(capability, c -> new ArrayList<>())
-                .add(new Content(capability.of(obj), chance, maxChance, tierChanceBoost));
+        warnTooManyIngredients(capability, false, t, 1);
+        t.computeIfAbsent(capability, c -> new ArrayList<>()).add(makeContent(capability.of(obj)));
         return this;
     }
 
     public <T> GTRecipeBuilder output(RecipeCapability<T> capability, T... obj) {
         var t = (perTick ? tickOutput : output);
-        if (t.get(capability) != null && t.get(capability).size() + obj.length > recipeType.getMaxOutputs(capability)) {
-            GTCEu.LOGGER.warn("Trying to add more outputs than RecipeType can support, id: {}, Max {}{}Outputs: {}",
-                    id, (perTick ? "Tick " : ""), capability.name, recipeType.getMaxOutputs(capability));
-        }
-        (perTick ? tickOutput : output).computeIfAbsent(capability, c -> new ArrayList<>()).addAll(Arrays.stream(obj)
-                .map(capability::of)
-                .map(o -> new Content(o, chance, maxChance, tierChanceBoost)).toList());
-        return this;
-    }
-
-    public <T> GTRecipeBuilder inputs(RecipeCapability<T> capability, Object obj) {
-        var t = (perTick ? tickInput : input);
-        if (t.get(capability) != null && t.get(capability).size() >= recipeType.getMaxInputs(capability)) {
-            GTCEu.LOGGER.warn("Trying to add more inputs than RecipeType can support, id: {}, Max {}{}Inputs: {}",
-                    id, (perTick ? "Tick " : ""), capability.name, recipeType.getMaxInputs(capability));
-        }
-        (perTick ? tickInput : input).computeIfAbsent(capability, c -> new ArrayList<>())
-                .add(new Content(capability.of(obj), chance, maxChance, tierChanceBoost));
-        return this;
-    }
-
-    public <T> GTRecipeBuilder inputs(RecipeCapability<T> capability, Object... obj) {
-        var t = (perTick ? tickInput : input);
-        if (t.get(capability) != null && t.get(capability).size() + obj.length > recipeType.getMaxInputs(capability)) {
-            GTCEu.LOGGER.warn("Trying to add more inputs than RecipeType can support, id: {}, Max {}{}Inputs: {}",
-                    id, (perTick ? "Tick " : ""), capability.name, recipeType.getMaxInputs(capability));
-        }
-        (perTick ? tickInput : input).computeIfAbsent(capability, c -> new ArrayList<>()).addAll(Arrays.stream(obj)
-                .map(capability::of)
-                .map(o -> new Content(o, chance, maxChance, tierChanceBoost)).toList());
-        return this;
-    }
-
-    public <T> GTRecipeBuilder outputs(RecipeCapability<T> capability, Object obj) {
-        var t = (perTick ? tickOutput : output);
-        if (t.get(capability) != null && t.get(capability).size() >= recipeType.getMaxOutputs(capability)) {
-            GTCEu.LOGGER.warn("Trying to add more outputs than RecipeType can support, id: {}, Max {}{}Outputs: {}",
-                    id, (perTick ? "Tick " : ""), capability.name, recipeType.getMaxOutputs(capability));
-        }
-        (perTick ? tickOutput : output).computeIfAbsent(capability, c -> new ArrayList<>())
-                .add(new Content(capability.of(obj), chance, maxChance, tierChanceBoost));
-        return this;
-    }
-
-    public <T> GTRecipeBuilder outputs(RecipeCapability<T> capability, Object... obj) {
-        var t = (perTick ? tickOutput : output);
-        if (t.get(capability) != null && t.get(capability).size() + obj.length > recipeType.getMaxOutputs(capability)) {
-            GTCEu.LOGGER.warn("Trying to add more outputs than RecipeType can support, id: {}, Max {}{}Outputs: {}",
-                    id, (perTick ? "Tick " : ""), capability.name, recipeType.getMaxOutputs(capability));
-        }
-        (perTick ? tickOutput : output).computeIfAbsent(capability, c -> new ArrayList<>()).addAll(Arrays.stream(obj)
-                .map(capability::of)
-                .map(o -> new Content(o, chance, maxChance, tierChanceBoost)).toList());
+        warnTooManyIngredients(capability, false, t, obj.length);
+        t.computeIfAbsent(capability, c -> new ArrayList<>())
+                .addAll(Arrays.stream(obj).map(capability::of).map(this::makeContent).toList());
         return this;
     }
 
@@ -265,28 +206,43 @@ public class GTRecipeBuilder {
     }
 
     public GTRecipeBuilder inputEU(long eu) {
-        return input(EURecipeCapability.CAP, eu);
+        return inputEU(eu, 1);
+    }
+
+    public GTRecipeBuilder inputEU(long voltage, long amperage) {
+        return input(EURecipeCapability.CAP, new EnergyStack(voltage, amperage));
     }
 
     public GTRecipeBuilder EUt(long eu) {
-        if (eu == 0) {
+        return EUt(eu, 1);
+    }
+
+    public GTRecipeBuilder EUt(long voltage, long amperage) {
+        if (voltage == 0) {
             GTCEu.LOGGER.error("EUt can't be explicitly set to 0, id: {}", id);
+        }
+        if (amperage < 1) {
+            GTCEu.LOGGER.error("Amperage must be a positive integer, id: {}", id);
         }
         var lastPerTick = perTick;
         perTick = true;
-        if (eu > 0) {
+        if (voltage > 0) {
             tickInput.remove(EURecipeCapability.CAP);
-            inputEU(eu);
-        } else if (eu < 0) {
+            inputEU(voltage, amperage);
+        } else if (voltage < 0) {
             tickOutput.remove(EURecipeCapability.CAP);
-            outputEU(-eu);
+            outputEU(-voltage, amperage);
         }
         perTick = lastPerTick;
         return this;
     }
 
     public GTRecipeBuilder outputEU(long eu) {
-        return output(EURecipeCapability.CAP, eu);
+        return outputEU(eu, 1);
+    }
+
+    public GTRecipeBuilder outputEU(long voltage, long amperage) {
+        return output(EURecipeCapability.CAP, new EnergyStack(voltage, amperage));
     }
 
     public GTRecipeBuilder inputCWU(int cwu) {
@@ -304,7 +260,7 @@ public class GTRecipeBuilder {
             inputCWU(cwu);
         } else if (cwu < 0) {
             tickOutput.remove(CWURecipeCapability.CAP);
-            outputCWU(cwu);
+            outputCWU(-cwu);
         }
         perTick = lastPerTick;
         return this;
@@ -332,9 +288,12 @@ public class GTRecipeBuilder {
             case TagKey<?> tag -> inputItems((TagKey<Item>) tag);
             case MachineDefinition machine -> inputItems(machine);
             default -> {
-                GTCEu.LOGGER.error("Input item is not one of:\n" +
-                        "Item, Supplier<Item>, ItemStack, Ingredient, " +
-                        "MaterialEntry, TagKey<Item>, MachineDefinition, id: {}", id);
+                GTCEu.LOGGER.error(
+                        """
+                                Input item is not one of:
+                                Item, Supplier<Item>, ItemStack, Ingredient, SizedIngredient, MaterialEntry, TagKey<Item>, MachineDefinition
+                                id: {}""",
+                        id);
                 yield this;
             }
         };
@@ -351,72 +310,116 @@ public class GTRecipeBuilder {
             case TagKey<?> tag -> inputItems((TagKey<Item>) tag, count);
             case MachineDefinition machine -> inputItems(machine, count);
             default -> {
-                GTCEu.LOGGER.error("Input item is not one of:\n" +
-                        "Item, Supplier<Item>, ItemStack, Ingredient, " +
-                        "MaterialEntry, TagKey<Item>, MachineDefinition, id: {}", id);
+                GTCEu.LOGGER.error(
+                        """
+                                Input item is not one of:
+                                Item, Supplier<Item>, ItemStack, Ingredient, SizedIngredient, MaterialEntry, TagKey<Item>, MachineDefinition
+                                id: {}""",
+                        id);
                 yield this;
             }
         };
     }
 
     public GTRecipeBuilder inputItems(Ingredient input) {
+        if (intProviderInputError(input, 0)) {
+            return this;
+        } else if (missingIngredientError(0, true, ItemRecipeCapability.CAP, input::isEmpty)) {
+            return this;
+        }
         return input(ItemRecipeCapability.CAP, new SizedIngredient(input, 1));
     }
 
     public GTRecipeBuilder inputItems(Ingredient input, int count) {
+        if (intProviderInputError(input, 0)) {
+            return this;
+        } else if (missingIngredientError(0, true, ItemRecipeCapability.CAP, input::isEmpty)) {
+            return this;
+        }
         return input(ItemRecipeCapability.CAP, new SizedIngredient(input, count));
     }
 
     public GTRecipeBuilder inputItems(Ingredient... inputs) {
-        return input(ItemRecipeCapability.CAP, Arrays.stream(inputs)
-                .map(i -> new SizedIngredient(i, 1))
-                .toArray(SizedIngredient[]::new));
+        List<SizedIngredient> ingredients = new ArrayList<>();
+        for (int i = 0; i < inputs.length; i++) {
+            var ingredient = inputs[i];
+            if (intProviderInputError(ingredient, i)) {
+                return this;
+            } else if (missingIngredientError(i, true, ItemRecipeCapability.CAP, ingredient::isEmpty)) {
+                return this;
+            } else {
+                ingredients.add(new SizedIngredient(ingredient, 1));
+            }
+        }
+        return input(ItemRecipeCapability.CAP, ingredients.toArray(SizedIngredient[]::new));
     }
 
     public GTRecipeBuilder inputItems(SizedIngredient input) {
+        if (intProviderInputError(input.ingredient(), 0)) {
+            return this;
+        } else if (missingIngredientError(0, true, ItemRecipeCapability.CAP, input.ingredient()::isEmpty)) {
+            return this;
+        }
         return input(ItemRecipeCapability.CAP, input);
     }
 
+    public GTRecipeBuilder inputItems(SizedIngredient... inputs) {
+        List<SizedIngredient> ingredients = new ArrayList<>();
+        for (int i = 0; i < inputs.length; i++) {
+            var ingredient = inputs[i];
+            if (intProviderInputError(ingredient.ingredient(), i)) {
+                return this;
+            } else if (missingIngredientError(i, true, ItemRecipeCapability.CAP, ingredient.ingredient()::isEmpty)) {
+                return this;
+            } else {
+                ingredients.add(ingredient);
+            }
+        }
+        return input(ItemRecipeCapability.CAP, ingredients.toArray(SizedIngredient[]::new));
+    }
+
     public GTRecipeBuilder inputItems(ItemStack input) {
-        if (input.isEmpty()) {
-            GTCEu.LOGGER.error("Input items is empty, id: {}", id);
+        if (missingIngredientError(0, true, ItemRecipeCapability.CAP, input::isEmpty)) {
+            return this;
         } else {
-            var matStack = ItemMaterialData.getMaterialInfo(input.getItem());
+            var matInfo = ItemMaterialData.getMaterialInfo(input.getItem());
             if (chance == maxChance && chance != 0) {
-                if (matStack != null) {
-                    tempItemMaterialStacks.addAll(matStack.getMaterials());
+                if (matInfo != null) {
+                    for (var matStack : matInfo.getMaterials()) {
+                        tempItemMaterialStacks.add(matStack.multiply(input.getCount()));
+                    }
                 } else {
                     tempItemStacks.add(input);
                 }
             }
         }
-        return input(ItemRecipeCapability.CAP, RecipeUtil.makeSizedIngredient(input));
+        return input(ItemRecipeCapability.CAP, RecipeHelper.makeSizedIngredient(input));
     }
 
     public GTRecipeBuilder inputItems(ItemStack... inputs) {
-        for (ItemStack itemStack : inputs) {
-            if (itemStack.isEmpty()) {
-                GTCEu.LOGGER.error("Input item is empty, id: {}", id);
+        List<SizedIngredient> ingredients = new ArrayList<>();
+        for (int i = 0; i < inputs.length; i++) {
+            ItemStack itemStack = inputs[i];
+            if (missingIngredientError(i, true, ItemRecipeCapability.CAP, itemStack::isEmpty)) {
+                return this;
             } else {
-                var matStack = ItemMaterialData.getMaterialInfo(itemStack.getItem());
+                var matInfo = ItemMaterialData.getMaterialInfo(itemStack.getItem());
                 if (chance == maxChance && chance != 0) {
-                    if (matStack != null) {
-                        tempItemMaterialStacks.addAll(matStack.getMaterials());
+                    if (matInfo != null) {
+                        for (var matStack : matInfo.getMaterials()) {
+                            tempItemMaterialStacks.add(matStack.multiply(itemStack.getCount()));
+                        }
                     } else {
                         tempItemStacks.add(itemStack);
                     }
                 }
+                ingredients.add(RecipeHelper.makeSizedIngredient(itemStack));
             }
         }
-        return input(ItemRecipeCapability.CAP, Arrays.stream(inputs)
-                .map(RecipeUtil::makeSizedIngredient)
-                .toArray(SizedIngredient[]::new));
+        return input(ItemRecipeCapability.CAP, ingredients.toArray(SizedIngredient[]::new));
     }
 
     public GTRecipeBuilder inputItems(TagKey<Item> tag, int amount) {
-        if (amount == 0) {
-            GTCEu.LOGGER.error("Item Count is 0, id: {}", id);
-        }
         return inputItems(SizedIngredient.of(tag, amount));
     }
 
@@ -429,15 +432,7 @@ public class GTRecipeBuilder {
     }
 
     public GTRecipeBuilder inputItems(Item input) {
-        var matStack = ItemMaterialData.getMaterialInfo(input);
-        if (chance == maxChance && chance != 0) {
-            if (matStack != null) {
-                tempItemMaterialStacks.addAll(matStack.getMaterials());
-            } else {
-                tempItemStacks.add(new ItemStack(input));
-            }
-        }
-        return inputItems(RecipeUtil.makeSizedIngredient(new ItemStack(input)));
+        return inputItems(input, 1);
     }
 
     public GTRecipeBuilder inputItems(Supplier<? extends Item> input) {
@@ -445,7 +440,7 @@ public class GTRecipeBuilder {
     }
 
     public GTRecipeBuilder inputItems(Supplier<? extends Item> input, int amount) {
-        return inputItems(new ItemStack(input.get(), amount));
+        return inputItems(input.get(), amount);
     }
 
     public GTRecipeBuilder inputItems(TagPrefix orePrefix, Material material) {
@@ -457,34 +452,31 @@ public class GTRecipeBuilder {
     }
 
     public GTRecipeBuilder inputItems(MaterialEntry input, int count) {
-        if (input.material().isNull()) {
-            GTCEu.LOGGER.error("MaterialEntry material is null, id: {}, TagPrefix: {}", id, input.tagPrefix());
-        }
         return inputItems(input.tagPrefix(), input.material(), count);
     }
 
     public GTRecipeBuilder inputItems(TagPrefix tagPrefix, @NotNull Material material, int count) {
-        if (material.isNull()) {
+        if (tagPrefix.isEmpty() || material.isNull()) {
             GTCEu.LOGGER.error(
                     "Tried to set input item stack that doesn't exist, id: {}, TagPrefix: {}, Material: {}, Count: {}",
-                    id, tagPrefix, "null", count);
-            return inputItems(ItemStack.EMPTY);
+                    id, tagPrefix, material, count);
+            return this;
         } else {
             tempItemMaterialStacks.add(new MaterialStack(material, tagPrefix.getMaterialAmount(material) * count));
-            tagPrefix.secondaryMaterials().forEach(
-                    mat -> tempItemMaterialStacks.add(new MaterialStack(mat.material(), mat.amount() * count)));
+            tagPrefix.secondaryMaterials().forEach(mat -> tempItemMaterialStacks.add(mat.multiply(count)));
         }
         TagKey<Item> tag = ChemicalHelper.getTag(tagPrefix, material);
-        if (tag == null) {
+        if (tag != null) {
+            return inputItems(tag, count);
+        } else {
             var item = ChemicalHelper.get(tagPrefix, material, count);
             if (item.isEmpty()) {
                 GTCEu.LOGGER.error(
                         "Tried to set input item stack that doesn't exist, id: {}, TagPrefix: {}, Material: {}, Count: {}",
                         id, tagPrefix, material, count);
             }
-            return input(ItemRecipeCapability.CAP, RecipeUtil.makeSizedIngredient(item));
+            return input(ItemRecipeCapability.CAP, RecipeHelper.makeSizedIngredient(item));
         }
-        return inputItems(tag, count);
     }
 
     public GTRecipeBuilder inputItems(MachineDefinition machine) {
@@ -499,15 +491,14 @@ public class GTRecipeBuilder {
         return switch (output) {
             case Item item -> outputItems(item);
             case Supplier<?> supplier when supplier.get() instanceof ItemLike item -> outputItems(item.asItem());
-            case Ingredient ingredient -> outputItems(ingredient);
-            case SizedIngredient ingredient -> outputItems(ingredient);
             case ItemStack stack -> outputItems(stack);
             case MaterialEntry entry -> outputItems(entry);
             case MachineDefinition machine -> outputItems(machine);
             default -> {
-                GTCEu.LOGGER.error("Output item is not one of:\n" +
-                        "Item, Supplier<Item>, ItemStack, Ingredient, " +
-                        "MaterialEntry, TagKey<Item>, MachineDefinition, id: {}", id);
+                GTCEu.LOGGER.error("""
+                        Output item is not one of:
+                        Item, Supplier<Item>, ItemStack, MaterialEntry, MachineDefinition
+                        id: {}""", id);
                 yield this;
             }
         };
@@ -519,52 +510,39 @@ public class GTRecipeBuilder {
             case Supplier<?> supplier when supplier.get() instanceof ItemLike item -> outputItems(item.asItem(), count);
             case ItemStack stack -> outputItems(stack.copyWithCount(count));
             case MaterialEntry entry -> outputItems(entry, count);
-            case Ingredient ingredient -> outputItems(ingredient, count);
-            case SizedIngredient ingredient -> outputItems(ingredient.ingredient(), count);
             case MachineDefinition machine -> outputItems(machine, count);
             default -> {
-                GTCEu.LOGGER.error("Output item is not one of:\n" +
-                        "Item, Supplier<Item>, ItemStack, Ingredient, " +
-                        "MaterialEntry, TagKey<Item>, MachineDefinition, id: {}", id);
+                GTCEu.LOGGER.error("""
+                        Output item is not one of:
+                        Item, Supplier<Item>, ItemStack, MaterialEntry, MachineDefinition
+                        id: {}""", id);
                 yield this;
             }
         };
-    }
-
-    public GTRecipeBuilder outputItems(Ingredient input) {
-        return output(ItemRecipeCapability.CAP, new SizedIngredient(input, 1));
     }
 
     public GTRecipeBuilder outputItems(Ingredient input, int count) {
         return output(ItemRecipeCapability.CAP, new SizedIngredient(input, count));
     }
 
-    public GTRecipeBuilder outputItems(Ingredient... inputs) {
-        return output(ItemRecipeCapability.CAP, Arrays.stream(inputs)
-                .map(i -> new SizedIngredient(i, 1))
-                .toArray(SizedIngredient[]::new));
-    }
-
-    public GTRecipeBuilder outputItems(SizedIngredient input) {
-        return output(ItemRecipeCapability.CAP, input);
-    }
-
     public GTRecipeBuilder outputItems(ItemStack output) {
-        if (output.isEmpty()) {
-            GTCEu.LOGGER.error("Output items is empty, id: {}", id);
+        if (missingIngredientError(0, false, ItemRecipeCapability.CAP, output::isEmpty)) {
+            return this;
         }
-        return output(ItemRecipeCapability.CAP, RecipeUtil.makeSizedIngredient(output));
+        return output(ItemRecipeCapability.CAP, RecipeHelper.makeSizedIngredient(output));
     }
 
     public GTRecipeBuilder outputItems(ItemStack... outputs) {
-        for (ItemStack itemStack : outputs) {
-            if (itemStack.isEmpty()) {
-                GTCEu.LOGGER.error("Output items is empty, id: {}", id);
+        List<SizedIngredient> ingredients = new ArrayList<>();
+        for (int i = 0; i < outputs.length; i++) {
+            ItemStack itemStack = outputs[i];
+            if (missingIngredientError(i, false, ItemRecipeCapability.CAP, itemStack::isEmpty)) {
+                return this;
+            } else {
+                ingredients.add(RecipeHelper.makeSizedIngredient(itemStack));
             }
         }
-        return output(ItemRecipeCapability.CAP, Arrays.stream(outputs)
-                .map(RecipeUtil::makeSizedIngredient)
-                .toArray(SizedIngredient[]::new));
+        return output(ItemRecipeCapability.CAP, ingredients.toArray(SizedIngredient[]::new));
     }
 
     public GTRecipeBuilder outputItems(Item output, int amount) {
@@ -588,32 +566,27 @@ public class GTRecipeBuilder {
     }
 
     public GTRecipeBuilder outputItems(TagPrefix orePrefix, @NotNull Material material, int count) {
-        if (material.isNull()) {
+        if (orePrefix.isEmpty() || material.isNull()) {
             GTCEu.LOGGER.error(
                     "Tried to set output item stack that doesn't exist, id: {}, TagPrefix: {}, Material: {}, Count: {}",
-                    id, orePrefix, "null", count);
-            return outputItems(ItemStack.EMPTY);
+                    id, orePrefix, material, count);
+            return this;
         }
         var item = ChemicalHelper.get(orePrefix, material, count);
         if (item.isEmpty()) {
             GTCEu.LOGGER.error(
                     "Tried to set output item stack that doesn't exist, id: {}, TagPrefix: {}, Material: {}, Count: {}",
-                    id, orePrefix, "null", count);
+                    id, orePrefix, material, count);
+            return this;
         }
         return outputItems(item);
     }
 
     public GTRecipeBuilder outputItems(MaterialEntry entry) {
-        if (entry.material().isNull()) {
-            GTCEu.LOGGER.error("Unification Entry material is null, id: {}, TagPrefix: {}", id, entry.tagPrefix());
-        }
         return outputItems(entry.tagPrefix(), entry.material());
     }
 
     public GTRecipeBuilder outputItems(MaterialEntry entry, int count) {
-        if (entry.material().isNull()) {
-            GTCEu.LOGGER.error("Unification Entry material is null, id: {}, TagPrefix: {}", id, entry.tagPrefix());
-        }
         return outputItems(entry.tagPrefix(), entry.material(), count);
     }
 
@@ -625,8 +598,13 @@ public class GTRecipeBuilder {
         return outputItems(machine.asStack(count));
     }
 
+    protected GTRecipeBuilder outputItems(SizedIngredient ingredient) {
+        return output(ItemRecipeCapability.CAP, ingredient);
+    }
+
     public GTRecipeBuilder outputItemsRanged(ItemStack output, IntProvider intProvider) {
-        return outputItems(IntProviderIngredient.of(RecipeUtil.makeItemIngredient(output), intProvider));
+        Ingredient inner = IntProviderIngredient.of(RecipeHelper.makeItemIngredient(output), intProvider);
+        return outputItems(new SizedIngredient(inner, 1));
     }
 
     public GTRecipeBuilder outputItemsRanged(Item input, IntProvider intProvider) {
@@ -699,7 +677,7 @@ public class GTRecipeBuilder {
     }
 
     public GTRecipeBuilder notConsumableFluid(FluidStack fluid) {
-        return notConsumableFluid(RecipeUtil.makeSizedFluidIngredient(fluid));
+        return notConsumableFluid(RecipeHelper.makeSizedFluidIngredient(fluid));
     }
 
     public GTRecipeBuilder notConsumableFluid(SizedFluidIngredient ingredient) {
@@ -718,9 +696,7 @@ public class GTRecipeBuilder {
     }
 
     public GTRecipeBuilder chancedInput(ItemStack stack, int chance, int tierChanceBoost) {
-        if (0 >= chance || chance > ChanceLogic.getMaxChancedValue()) {
-            GTCEu.LOGGER.error("Chance cannot be less or equal to 0 or more than {}. Actual: {}.",
-                    ChanceLogic.getMaxChancedValue(), chance, new Throwable());
+        if (checkChanceAndPrintError(chance)) {
             return this;
         }
         int lastChance = this.chance;
@@ -734,9 +710,7 @@ public class GTRecipeBuilder {
     }
 
     public GTRecipeBuilder chancedInput(FluidStack stack, int chance, int tierChanceBoost) {
-        if (0 >= chance || chance > ChanceLogic.getMaxChancedValue()) {
-            GTCEu.LOGGER.error("Chance cannot be less or equal to 0 or more than {}. Actual: {}.",
-                    ChanceLogic.getMaxChancedValue(), chance, new Throwable());
+        if (checkChanceAndPrintError(chance)) {
             return this;
         }
         int lastChance = this.chance;
@@ -750,9 +724,7 @@ public class GTRecipeBuilder {
     }
 
     public GTRecipeBuilder chancedOutput(ItemStack stack, int chance, int tierChanceBoost) {
-        if (0 >= chance || chance > ChanceLogic.getMaxChancedValue()) {
-            GTCEu.LOGGER.error("Chance cannot be less or equal to 0 or more than {}. Actual: {}.",
-                    ChanceLogic.getMaxChancedValue(), chance, new Throwable());
+        if (checkChanceAndPrintError(chance)) {
             return this;
         }
         int lastChance = this.chance;
@@ -766,9 +738,7 @@ public class GTRecipeBuilder {
     }
 
     public GTRecipeBuilder chancedOutput(FluidStack stack, int chance, int tierChanceBoost) {
-        if (0 >= chance || chance > ChanceLogic.getMaxChancedValue()) {
-            GTCEu.LOGGER.error("Chance cannot be less or equal to 0 or more than {}. Actual: {}.",
-                    ChanceLogic.getMaxChancedValue(), chance, new Throwable());
+        if (checkChanceAndPrintError(chance)) {
             return this;
         }
         int lastChance = this.chance;
@@ -959,25 +929,33 @@ public class GTRecipeBuilder {
     }
 
     public GTRecipeBuilder inputFluids(FluidStack input) {
+        if (missingIngredientError(0, true, FluidRecipeCapability.CAP, input::isEmpty)) {
+            return this;
+        }
         var matStack = ChemicalHelper.getMaterial(input.getFluid());
         if (!matStack.isNull() && chance != 0 && chance == maxChance) {
             tempFluidStacks.add(new MaterialStack(matStack, input.getAmount() * GTValues.M / GTValues.L));
         }
-        return input(FluidRecipeCapability.CAP, RecipeUtil.makeSizedFluidIngredient(input));
+        return input(FluidRecipeCapability.CAP, RecipeHelper.makeSizedFluidIngredient(input));
     }
 
     public GTRecipeBuilder inputFluids(FluidStack... inputs) {
-        for (var input : inputs) {
-            var matStack = ChemicalHelper.getMaterial(input.getFluid());
-            if (!matStack.isNull()) {
-                if (chance == maxChance && chance != 0) {
-                    tempFluidStacks.add(new MaterialStack(matStack, input.getAmount() * GTValues.M / GTValues.L));
+        List<SizedFluidIngredient> ingredients = new ArrayList<>();
+        for (int i = 0; i < inputs.length; i++) {
+            FluidStack fluid = inputs[i];
+            if (missingIngredientError(i, true, FluidRecipeCapability.CAP, fluid::isEmpty)) {
+                return this;
+            } else {
+                var matStack = ChemicalHelper.getMaterial(fluid.getFluid());
+                if (!matStack.isNull()) {
+                    if (chance == maxChance && chance != 0) {
+                        tempFluidStacks.add(new MaterialStack(matStack, fluid.getAmount() * GTValues.M / GTValues.L));
+                    }
                 }
+                ingredients.add(RecipeHelper.makeSizedFluidIngredient(fluid));
             }
         }
-        return input(FluidRecipeCapability.CAP, Arrays.stream(inputs)
-                .map(RecipeUtil::makeSizedFluidIngredient)
-                .toArray(SizedFluidIngredient[]::new));
+        return input(FluidRecipeCapability.CAP, ingredients.toArray(SizedFluidIngredient[]::new));
     }
 
     public GTRecipeBuilder inputFluids(SizedFluidIngredient... inputs) {
@@ -995,6 +973,14 @@ public class GTRecipeBuilder {
 
     public GTRecipeBuilder outputFluids(SizedFluidIngredient... outputs) {
         return output(FluidRecipeCapability.CAP, outputs);
+    }
+
+    public GTRecipeBuilder outputFluidsRanged(FluidStack output, IntProvider intProvider) {
+        return outputFluidsRanged(FluidIngredient.of(output), intProvider);
+    }
+
+    protected GTRecipeBuilder outputFluidsRanged(FluidIngredient output, IntProvider intProvider) {
+        return outputFluids(new SizedFluidIngredient(IntProviderFluidIngredient.of(output, intProvider), 1));
     }
 
     //////////////////////////////////////
@@ -1323,6 +1309,7 @@ public class GTRecipeBuilder {
         tempItemMaterialStacks = null;
         tempFluidStacks = null;
 
+        assert recipeType != null;
         output.accept(id.withPrefix(recipeType.registryName.getPath() + "/"), build(), null);
     }
 
@@ -1330,14 +1317,22 @@ public class GTRecipeBuilder {
         var itemOutputs = output.getOrDefault(ItemRecipeCapability.CAP, new ArrayList<>());
         var itemInputs = input.getOrDefault(ItemRecipeCapability.CAP, new ArrayList<>());
         if (itemOutputs.size() == 1 && (!itemInputs.isEmpty() || !tempFluidStacks.isEmpty())) {
-            var currOutput = itemOutputs.getFirst().content;
-            ItemLike out = null;
+            var currOutput = ItemRecipeCapability.CAP.of(itemOutputs.getFirst().content);
+            Item out = null;
             int outputCount = 0;
 
-            if (currOutput instanceof Ingredient ingredient) {
-                if (ingredient.getItems().length > 0) {
-                    out = ingredient.getItems()[0].getItem();
-                    outputCount = ingredient.getItems()[0].getCount();
+            if (currOutput.getContainedCustom() instanceof IntProviderIngredient intProvider) {
+                ItemStack[] items = intProvider.getInner().getItems();
+                if (items.length > 0) {
+                    out = items[0].getItem();
+                    // use the max amount of items for decomp info so dupes can't happen
+                    outputCount = intProvider.getCountProvider().getMaxValue();
+                }
+            } else if (!currOutput.ingredient().hasNoItems()) {
+                ItemStack[] items = currOutput.getItems();
+                if (items.length > 0) {
+                    out = items[0].getItem();
+                    outputCount = items[0].getCount();
                 }
             }
 
@@ -1346,14 +1341,18 @@ public class GTRecipeBuilder {
             }
 
             Reference2LongOpenHashMap<Material> matStacks = new Reference2LongOpenHashMap<>();
-            for (var input : tempItemMaterialStacks) {
-                long am = input.amount() / outputCount;
-                matStacks.addTo(input.material(), am);
+            if (itemMaterialInfo) {
+                for (var input : tempItemMaterialStacks) {
+                    long am = input.amount() / outputCount;
+                    matStacks.addTo(input.material(), am);
+                }
             }
 
-            for (var input : tempFluidStacks) {
-                long am = input.amount() / outputCount;
-                matStacks.addTo(input.material(), am);
+            if (fluidMaterialInfo) {
+                for (var input : tempFluidStacks) {
+                    long am = input.amount() / outputCount;
+                    matStacks.addTo(input.material(), am);
+                }
             }
 
             if (outputCount != 0 && !tempItemStacks.isEmpty()) {
@@ -1369,15 +1368,23 @@ public class GTRecipeBuilder {
     private void removeExistingMaterialInfo() {
         var itemOutputs = output.get(ItemRecipeCapability.CAP);
         if (itemOutputs.size() == 1) {
-            var currOutput = itemOutputs.get(0).content;
-            ItemLike out = null;
+            var currOutput = ItemRecipeCapability.CAP.of(itemOutputs.getFirst().content);
+            Item out = null;
             int outputCount = 0;
 
-            if (currOutput instanceof Ingredient ingredient) {
-                if (ingredient.getItems().length > 0) {
-                    out = ingredient.getItems()[0].getItem();
+            if (currOutput.getContainedCustom() instanceof IntProviderIngredient intProvider) {
+                ItemStack[] items = intProvider.getInner().getItems();
+                if (items.length > 0) {
+                    out = items[0].getItem();
+                    // use the max amount of items for decomp info so dupes can't happen
+                    outputCount = intProvider.getCountProvider().getMaxValue();
                 }
-                outputCount = ingredient.getItems()[0].getCount();
+            } else if (!currOutput.ingredient().hasNoItems()) {
+                ItemStack[] items = currOutput.getItems();
+                if (items.length > 0) {
+                    out = items[0].getItem();
+                    outputCount = items[0].getCount();
+                }
             }
 
             if (out == null || out == Items.AIR) {
@@ -1402,13 +1409,61 @@ public class GTRecipeBuilder {
                 conditions, List.of(), data, duration, recipeCategory);
     }
 
+    protected void warnTooManyIngredients(RecipeCapability<?> capability,
+                                          boolean isInput,
+                                          Map<RecipeCapability<?>, List<Content>> table,
+                                          int addedEntries) {
+        var recipeCapabilityMax = isInput ? recipeType.maxInputs : recipeType.maxOutputs;
+        if (!recipeCapabilityMax.containsKey(capability)) return;
+
+        int max = recipeCapabilityMax.getInt(capability);
+        if (table.getOrDefault(capability, List.of()).size() + addedEntries > max) {
+            String io = isInput ? "inputs" : "outputs";
+            GTCEu.LOGGER.warn("Recipe {} is trying to add more {} than its recipe type can support, Max {} {}: {}",
+                    id, io, capability.name, io, max);
+        }
+    }
+
+    protected boolean intProviderInputError(Ingredient ingredient, int index) {
+        if (ingredient.getCustomIngredient() instanceof IntProviderIngredient) {
+            int size = (perTick ? tickOutput : output).getOrDefault(ItemRecipeCapability.CAP, List.of()).size();
+            GTCEu.LOGGER.error("Using int provider ingredients as inputs is not supported!" +
+                    "Input {} in recipe {} will be skipped.", size + index, id);
+            return true;
+        }
+        return false;
+    }
+
+    protected boolean missingIngredientError(int index, boolean isInput,
+                                             RecipeCapability<?> cap, BooleanSupplier empty) {
+        if (empty.getAsBoolean()) {
+            String io = isInput ? "Input" : "Output";
+            if (perTick) {
+                io = "Tick " + io.toLowerCase(Locale.ROOT);
+            }
+            int size = (perTick ? tickOutput : output).getOrDefault(cap, List.of()).size();
+            GTCEu.LOGGER.error("{} {} {} of recipe {} is empty", io, cap.name, size + index, id);
+            return true;
+        }
+        return false;
+    }
+
+    protected boolean checkChanceAndPrintError(int chance) {
+        if (0 >= chance || chance > ChanceLogic.getMaxChancedValue()) {
+            GTCEu.LOGGER.error("Chance cannot be less or equal to 0 or more than {}. Actual: {}.",
+                    ChanceLogic.getMaxChancedValue(), chance, new Throwable());
+            return true;
+        }
+        return false;
+    }
+
     //////////////////////////////////////
     // ******* Quick Query *******//
     //////////////////////////////////////
-    public long EUt() {
-        if (!tickInput.containsKey(EURecipeCapability.CAP)) return 0;
-        if (tickInput.get(EURecipeCapability.CAP).isEmpty()) return 0;
-        return EURecipeCapability.CAP.of(tickInput.get(EURecipeCapability.CAP).get(0).content);
+    public EnergyStack EUt() {
+        if (!tickInput.containsKey(EURecipeCapability.CAP)) return EnergyStack.EMPTY;
+        if (tickInput.get(EURecipeCapability.CAP).isEmpty()) return EnergyStack.EMPTY;
+        return EURecipeCapability.CAP.of(tickInput.get(EURecipeCapability.CAP).getFirst().content);
     }
 
     public int getSolderMultiplier() {
